--- a/config.yaml
+++ b/config.yaml
@@ -23,9 +23,11 @@ languages:
     en:
         languageName: English
         weight: 1
+        disabled: false
     bn:
         languageName: বাংলা
         weight: 3
+        disabled: true
 
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
 # DefaultContentLanguage: bn
@@ -79,7 +81,7 @@ params:
             enable: true
             services:
                 darkreader:
-                    defaultColorScheme: system # options are 'system', 'dark', 'light'
+                    defaultColorScheme: dark # options are 'system', 'dark', 'light'
                     fixes:
                         invert: ['img[src$=".svg"]'] # inverts svg colors.
                     theme:
@@ -89,19 +91,19 @@ params:
 
         # Enable and configure portfolio
         portfolio:
-            enable: true
+            enable: false
 
         # Enable and configure blog posts
         blog:
-            enable: true
+            enable: false
             # Share post on different social media
             shareButtons:
-                facebook: true
-                twitter: true
-                linkedin: true
-                reddit: true
-                whatsapp: true
-                email: true
+                # facebook: true
+                # twitter: true
+                # linkedin: true
+                # reddit: true
+                # whatsapp: true
+                # email: true
                 # tumblr: true
                 # pocket: true
                 # diaspora: true
@@ -109,7 +111,7 @@ params:
 
         # Enable & configure "Notes" features
         notes:
-            enable: true
+            enable: false
 
         # Enable comment feature. There, should be only one of them.
         comment:
@@ -180,7 +182,7 @@ params:
 
         # specify whether you want to show Table of Contents in reading page
         toc:
-            enable: true
+            enable: false
 
         # Show tags under the post title
         tags:
