--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,20 +1,18 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Jack Clayton"
+nickname: "Jack"
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Hi, I am"
+greeting: "Hi, I'm"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
+    email: "JackClayton1996@gmail.com"
+    phone: "+0123456789"
+    github: claytonjack
+    linkedin: claytonjack
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+    - I love servers
+    - I work with Linux
+    - I love open-source
