--- a/data/en/sections/recent-posts.yaml
+++ b/data/en/sections/recent-posts.yaml
@@ -1,11 +1,10 @@
 # section information
 section:
-  name: Recent Posts
-  id: recent-posts
-  enable: true
-  weight: 7
-  showOnNavbar: true
-  # Can optionally hide the title in sections
-  # hideTitle: true
-
+    name: Recent Posts
+    id: recent-posts
+    enable: false
+    weight: 7
+    showOnNavbar: false
+    # Can optionally hide the title in sections
+    # hideTitle: true
 # no additional configuration is required
