--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,37 +8,33 @@ section:
     template: sections/about.html
 
 # your designation
-designation: Software Engineer
+designation: Student
 # your company information
 company:
-    name: Example Co.
-    url: "https://www.example.com"
+    name: Sheridan College
+    url: "https://www.sheridancollege.ca/"
 
 # your resume. this file path should be relative to you "static" directory
 # Dreprecated. Use resourceLinks instead.
 # resume: "files/resume.pdf"
 
 # a summary about you
-summary: "I am a passionate software engineer with x years of working experience. I built OSS tools for [Kubernetes](https://kubernetes.io/) using GO. My tools help people to deploy their workloads in Kubernetes. Sometimes, I work on some fun projects such as writing a theme, etc."
+summary: "I’m a passionate tech enthusiast who specializes in DevOps and Linux server administation, with an emphasis on containerization and infrastructure-as-code tools. I have also have extensive experience working with computer hardware, including both assembly and maintenance. My strong work ethic, and thirst for knowlege drive me to constantly acquire new skills and stay updated with emerging technologies."
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
     - name: Email
       icon: "fas fa-envelope"
-      url: "example@gmail.com"
+      url: "claytojo@sheridancollege.ca"
 
     - name: LinkedIn
       icon: "fab fa-linkedin"
-      url: "#"
+      url: "https://www.linkedin.com/in/clayton-jack/"
 
     - name: Github
       icon: "fab fa-github"
-      url: "https://www.github.com/example"
-
-    - name: Github
-      icon: "fab fa-github"
-      url: "https://www.github.com/example"
+      url: "https://github.com/claytonjack"
 
 # You can put custom buttons to link your relevant resources.
 # For example, you can put link for your resume.
@@ -50,34 +46,34 @@ resourceLinks:
 # You can show your verifiable certificates from https://www.credly.com.
 # You can also show a circular bar indicating the level of expertise on a certain skill
 badges:
-    - type: certification
-      name: Certified Kubernetes Security Specialist
-      url: "https://www.credly.com/org/the-linux-foundation/badge/exam-developer-certified-kubernetes-security-specialist"
-      badge: "https://images.credly.com/size/680x680/images/f4bf92ed-8985-40b2-bc07-2f9308780854/kubernetes-security-specialist-logo-examdev.png"
-
-    - type: certification
-      name: Istio and IBM Cloud Kubernetes Service
-      url: "https://www.credly.com/org/the-linux-foundation/badge/exam-developer-certified-kubernetes-security-specialist"
-      badge: "https://images.credly.com/size/680x680/images/8d34d489-84bf-4861-a4a0-9e9d68318c5c/Beyond_basics_of_Istio_on_Cloud_v2.png"
-
-    - type: certification
-      name: Artificial Intelligence and Machine Learning
-      url: "https://www.credly.com/org/grupo-bancolombia/badge/artificial-intelligence-and-machine-learning"
-      badge: "https://images.credly.com/size/680x680/images/e027514f-9d07-4b29-862f-fe21a8aaebf1/ae.png"
-
     - type: soft-skill-indicator
-      name: Leadership
-      percentage: 85
+      name: Work Ethic
+      percentage: 100
       color: blue
 
     - type: soft-skill-indicator
-      name: Team Work
-      percentage: 90
+      name: Adaptability
+      percentage: 100
       color: yellow
 
     - type: soft-skill-indicator
-      name: Hard Working
-      percentage: 85
+      name: Communication
+      percentage: 100
+      color: orange
+
+    - type: soft-skill-indicator
+      name: Problem Solving
+      percentage: 100
+      color: blue
+
+    - type: soft-skill-indicator
+      name: Attention to Detail
+      percentage: 100
+      color: yellow
+
+    - type: soft-skill-indicator
+      name: Cultural Understanding
+      percentage: 100
       color: orange
 # you can also provide color code instead of the color name
 # - type: soft-skill-indicator
