--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -11,49 +11,44 @@ section:
 # Your Skills.
 # Give a summary of you each skill in the summary section.
 skills:
-    - name: Linux
+    - name: Linux Administration
       logo: /images/sections/skills/linux.png
-      summary: "Using as the main operating system. Capable of writing bash/shell scripts."
+      summary: "Proficient in Linux system administration, encompassing both practical knowledge of the Linux ecosystem, as well as a history of effectively managing Linux-based servers."
 
     - name: Docker
-      logo: /images/sections/skills/docker.svg
-      summary: "Write most of the programs as dockerized container. Experienced with multi-stage, multi-arch build process."
+      logo: /images/sections/skills/docker.png
+      summary: "Experienced with containerization using Docker, enabling the deployment of applications in isolated, portable environments, enhancing scalability and consistency."
       url: "https://www.docker.com/"
 
     - name: Virtualization
-      logo: /images/sections/skills/linux.png
-      summary: "Write most of the programs as dockerized container. Experienced with multi-stage, multi-arch build process."
+      logo: /images/sections/skills/proxmox.png
+      summary: "Adept with virtualization using hypervisors such as Proxmox for the creation and management of various virtual machines."
       url: "https://www.docker.com/"
 
-    - name: HashiCorp Packer
-      logo: /images/sections/skills/linux.png
-      summary: "Infrastructure as Code"
+    - name: Infrastructure as Code (IaC)
+      logo: /images/sections/skills/iac.png
+      summary: "Skilled in automating infrastructure provisioning, management, and deployment using tools like Docker Compose, HashiCorp Packer, and HashiCorp Terraform, ensuring efficient and consistent deployments."
       url: "https://www.redhat.com/en/topics/automation/what-is-infrastructure-as-code-iac"
-
-    - name: HashiCorp Terraform
-      logo: /images/sections/skills/linux.png
-      summary: "Infrastructure as Code"
-      url: "https://www.redhat.com/en/topics/automation/what-is-infrastructure-as-code-iac"
-
-    - name: Cloud Computing
-      logo: /images/sections/skills/cloud.png
-      summary: "Worked with most of the major clouds such as GCP, AWS, Azure etc."
 
     - name: Git
       logo: /images/sections/skills/git.png
-      summary: "Experienced with git-based development. Mostly, use Github. Also, have experience in working with GitLab."
+      summary: "Competent in incorporating Git for version control within a DevOps workflow to facilitate streamlined deployment and management of infrastructure and applications."
       url: "https://git-scm.com/"
 
-    - name: Storage Solutions
-      logo: /images/sections/skills/c++.png
-      summary: "Know basic C/C++ programming. Used for contest programming and problem solving."
-
-    - name: Hardware Expertise
-      logo: /images/sections/skills/linux.png
-      summary: "Infrastructure as Code"
+    - name: Networking
+      logo: /images/sections/skills/networking.png
+      summary: "Seasoned history of successfully managing my own network infrastructure, as well as a strong understanding of networking concepts including DNS, DHCP, firewall, VPNs, and security."
       url: "https://www.redhat.com/en/topics/automation/what-is-infrastructure-as-code-iac"
 
-    - name: Networking Infrastructure
-      logo: /images/sections/skills/linux.png
-      summary: "Infrastructure as Code"
+    - name: Computer Hardware
+      logo: /images/sections/skills/computer-hardware.png
+      summary: "Boast almost a decade of experience building, maintaining, and troubleshooting computer hardware, ensuring optimal performance and reliability."
+
+    - name: Server Hardware
+      logo: /images/sections/skills/server-hardware.png
+      summary: "Qualified to setup and maintain server specific hardware including server racks, network switches, patch panels, and UPS's."
       url: "https://www.redhat.com/en/topics/automation/what-is-infrastructure-as-code-iac"
+
+    - name: Storage Configurations
+      logo: /images/sections/skills/storage.png
+      summary: "Well versed with RAID levels, file systems like ZFS, NAS configurations, JBOD arrays, backups, and snapshots for efficient data management."
